--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,17 @@
 plugins {
-    id 'java'
+    id 'java-library'
 }
 
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(11)
+    }
+}
+
+version = '1.2.1'
+
 group 'com.galvanize'
-version '1.0-SNAPSHOT'
+//version '1.0-SNAPSHOT'
 
 repositories {
     mavenCentral()
@@ -11,4 +19,12 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+jar {
+    manifest {
+        attributes(
+                'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
+                'Main-Class': 'com.galvanize.application'
+        )
+    }
 }
