--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ jar {
     manifest {
         attributes(
                 'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-                'Main-Class': 'com.galvanize.application'
+                'Main-Class': 'com.galvanize.Application'
         )
     }
 }
